Used another library for base64 encoding